--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "gulp-rename": "1.4.0",
         "gulp-sass": "4.0.2",
         "gulp-uglify": "3.0.1",
+        "gulp-terser": "1.1.7",
         "merge-stream": "^1.0.1"
     }
 }
