--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
         "bootstrap": "4.3.1",
         "chart.js": "2.7.3",
         "datatables.net-bs4": "1.10.19",
-        "jquery": "3.3.1",
-        "jquery.easing": "^1.4.1"
+        "jquery": "^3.4.1",
+        "jquery.easing": "^1.4.1",
+        "popper.js": "^1.15.0"
     },
     "devDependencies": {
-        "browser-sync": "2.26.3",
+        "browser-sync": "^2.26.7",
         "del": "^3.0.0",
         "gulp": "4.0.0",
         "gulp-autoprefixer": "6.0.0",
@@ -48,8 +49,8 @@
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "1.4.0",
         "gulp-sass": "4.0.2",
-        "gulp-uglify": "3.0.1",
         "gulp-terser": "1.1.7",
+        "gulp-uglify": "3.0.1",
         "merge-stream": "^1.0.1"
     }
 }
